frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: openfaas
  labels:
    app: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: frontend
        image: cccccci/todolist-frontend:latest
        ports:
        - containerPort: 8888

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: openfaas
spec:
  internalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    app: frontend-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8888
