mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: openfaas-fn
  labels:
    app: mongodb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-app
  template:
    metadata:
      labels:
        app: mongodb-app
    spec:
      containers:
      - name: mongodb
        image: panhan28/serverlesstodolist_mongodb:latest
        ports:
        - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: openfaas-fn
spec:
  internalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    app: mongodb-app
  ports:
    - protocol: TCP
      port: 27017
